tests/baselines/reference/twoAccessorsWithSameName.errors.txt
==== tests/cases/compiler/twoAccessorsWithSameName.ts (3 errors) ====
    class C {
        get x() { return 1; }
        get x() { return 1; } // error
        ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2015: Getter 'x' already declared.
    }
    
    class D {
        set x(v) {  }
        set x(v) {  } // error
        ~~~~~~~~~~~~~
!!! error TS2016: Setter 'x' already declared.
    }
    
    class E {
        get x() {
            return 1;
        }
        set x(v) { }
    }
    
    var x = {
        get x() {
            return 1;
        },
    
        // error
        get x() {
        ~~~~~~~~~
            return 1;
    ~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2015: Getter 'x' already declared.
    }
    
    var y = {
        get x() {
            return 1;
        },
        set x(v) { }
    }